--- a/stylesheet.less
+++ b/stylesheet.less
@@ -202,65 +202,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 
 
 // -----------------------------
-// #Feature
-// -----------------------------
-
-.widget.feature {
-    overflow: inherit;
-    background-color: @color-swatch1;
-    .feature-bgimg {
-        height: 400px;
-
-        @media @tablet {
-            height: 300px;
-        }
-        @media @mobile {
-            height: 240px;
-        }
-    }
-    // Content
-    .feature-bgimg .content {
-        height: auto;
-        min-height: inherit;
-        position: absolute;
-        bottom: 0;
-        z-index: 9999;
-        width: 100%;
-        background-color: hsla(hue(@color-swatch4), saturation(@color-swatch4), lightness(darken(@color-swatch4,20%)), 0.6);
-        button {
-            margin: 0;
-        }
-    }
-    .feature-bgimg,
-    .feature-bgimg .content {
-        display: block;
-    }
-    // Spare
-    .feature-bgimg .content .spare {
-        padding: 20px 0;
-    }
-    // Typography
-    h2, h3 {
-        padding: 0;
-        max-width: 80%;
-    }
-}
-
-// Feature Button
-.feature-btn {
-    position: absolute;
-    top: 35px;
-    right: 5%;
-
-    @media @mobile {
-        top: 30px;
-    }
-}
-
-
-
-
-// -----------------------------
 // Buttons
 // -----------------------------
 
@@ -316,6 +257,77 @@ button.btn,
 .widget.dropbox button {
     padding: 10px 10px 10px 40px;
 }
+
+
+
+
+// -----------------------------
+// #Feature
+// -----------------------------
+
+.widget.feature {
+    overflow: inherit;
+    background-color: @color-swatch1;
+    .feature-bgimg {
+        height: 400px;
+
+        @media @tablet {
+            height: 300px;
+        }
+        @media @mobile {
+            height: 240px;
+        }
+    }
+    // Content
+    .feature-bgimg .content {
+        height: auto;
+        min-height: inherit;
+        position: absolute;
+        bottom: 0;
+        z-index: 9999;
+        width: 100%;
+        background-color: hsla(hue(@color-swatch4), saturation(@color-swatch4), lightness(darken(@color-swatch4,20%)), 0.6);
+        button {
+            margin: 0;
+            @media @mobile {
+                padding: 3px 5px;
+            }
+        }
+    }
+    .feature-bgimg,
+    .feature-bgimg .content {
+        display: block;
+    }
+    // Spare
+    .feature-bgimg .content .spare {
+        padding: 20px 0;
+    }
+    // Typography
+    h2, h3 {
+        padding: 0;
+        max-width: 80%;
+    }
+}
+
+// Feature Button
+.feature-btn {
+    position: absolute;
+    top: 35px;
+    right: 5%;
+
+    @media @tablet {
+        top: 30px;
+    }
+    @media @mobile {
+        position: relative;
+        top: inherit;
+        right: inherit;
+        display: block;
+        margin-top: 10px;
+    }
+}
+
+
 
 
 /* ===============================
