Hid feature button at default

--- a/home.twig
+++ b/home.twig
@@ -8,7 +8,7 @@
     {% include "includes/header.twig" %}
 
     <!-- Feature -->
-    {{widget('feature', 'featurehome', {"header": "profile", "strapline":"profile", "buttonText":"Lorem Ipsum","defaultBgImg": asset('images/feature-bg.jpg'), 'positionTopPercentage': '0','showBtn': true})|raw}}
+    {{widget('feature', 'featurehome', {"header": "profile", "strapline":"profile", "buttonText":"Lorem Ipsum","defaultBgImg": asset('images/feature-bg.jpg'), 'positionTopPercentage': '0','showBtn': false})|raw}}
 
     <div class="main wrapper clearfix">
         {{zone('main')|raw}}
