Removed second profile widget from header

--- a/includes/header.twig
+++ b/includes/header.twig
@@ -1,9 +1,9 @@
 <div class="top-section">
 	<div class="wrapper">
-		<div class="top-section-content">
-			{{widget('profile', 'top-section_profile--address', { 'profileType' : 'address' })|raw}}
-			{{widget('profile', 'top-section_profile--phone', { 'profileType' : 'phone' })|raw}}
-		</div>
+		<ul class="top-section-list">
+			<li class="top-section-item">{{widget('profile', 'top-section_profile--address', { 'profileType' : 'address' })|raw}}</li>
+			<li class="top-section-item">{{widget('profile', 'top-section_profile--phone', { 'profileType' : 'phone' })|raw}}</li>
+		</ul>
 	</div>
 </div>
 
