--- a/includes/footer.twig
+++ b/includes/footer.twig
@@ -1,17 +1,8 @@
 <footer class="bk-footer">
     <div class="wrapper">
     	<div class="footer-content">
-			<div id="page-zones__template-widgets__profile-footer_profile--copyright" class="widget profile " data-widget-type="profile">
-				<span class="bk-profile-copyright">© Copyright The Cosy Club Bath. All Rights Reserved.</span>
-			</div>
-			<div id="page-zones__template-widgets__profile-footer_profile--socialicons" class="widget profile " data-widget-type="profile">
-			    <div class="bk-profile-socialicons">
-			        <!-- Facebook -->
-			        <span class="bk-socialicons-facebook">
-			       		<a href="facebook.com" target="_blank">Facebook</a>
-			        </span>
-			    </div>
-			</div>
+			{{widget('profile', 'profile3', { 'profileType':'copyright', 'copyright':'profile'})|raw}}
+			{{widget('profile', 'profile4', { 'profileType':'socialicons', 'socialicons':'profile'})|raw}}
 	    </div>
     </div>
 </footer>
