PIRATE-3188  Replace page.title variable with Page Title Widget

--- a/default.twig
+++ b/default.twig
@@ -10,7 +10,7 @@
     <!-- Page Title -->
     <div class="page-title">
         <div class="wrapper">
-            <h4>{{ page.title }}</h4>
+            {{widget('pagetitle', 'title', {})|raw}}
         </div>
     </div>
 
