--- a/stylesheet.less
+++ b/stylesheet.less
@@ -114,7 +114,8 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
     background-color: darken(@color-swatch1,6%);
 }
 
-.page-title h4 {
+.page-title h1 {
+    h4;
     padding-bottom: 0;
     color: @color-swatch5;
 }
@@ -562,7 +563,7 @@ hr.line.align-right {
     color: @font-swatch5-color;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
-    border-radius: 4px; 
+    border-radius: 4px;
 }
 
 .widget.twitter ul li a {
@@ -1790,7 +1791,7 @@ footer .footer2 .widget.profile form {
    IPHONE WIDTH
    =============================== */
 
-@media only screen and (max-width: 480px) { 
+@media only screen and (max-width: 480px) {
 
     .widget.companyname a {
         font-size: bkscale(@font-swatch10-font-size,0.9);
